// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uiActions creates hideFeedbackForm action 1`] = `
Object {
  "type": "hide_feedback_form",
}
`;

exports[`uiActions creates hideSearch action 1`] = `
Object {
  "type": "ui_hide_search",
}
`;

exports[`uiActions creates showFeedbackForm action 1`] = `
Object {
  "type": "show_feedback_form",
}
`;

exports[`uiActions creates showSearch action 1`] = `
Object {
  "type": "ui_show_search",
}
`;
